Add installation guide for MySQL and comprehensive project documentation
- Created a new installation guide for MySQL, detailing system requirements, installation steps, database creation, and troubleshooting tips.
- Added a comprehensive technical documentation for the User and Project Management System, covering project objectives, architecture, implementation details, and distribution instructions.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "web/MainApp",
+            "request": "launch",
+            "mainClass": "javafx.web/MainApp",
+            "projectName": "A3-PROGRAMA--O-DE-SOLU--ES-COMPUTACIONAIS_7d27453b"
+        },
+        {
+            "type": "java",
             "name": "Launch MainApp",
             "request": "launch",
             "mainClass": "MainApp",
