--- a/Gerenciamento_de_Usuarios/config.properties
+++ b/Gerenciamento_de_Usuarios/config.properties
@@ -1,4 +1,5 @@
-# ConfiguraÃ§Ã£o do Banco de Dados
-db.url=jdbc:mysql://localhost:3307/gestao_usuarios?useSSL=false&serverTimezone=UTC
-db.user=root
+#Configuração do Banco de Dados
+#Sun Sep 14 14:44:16 GMT-03:00 2025
 db.password=123
+db.url=jdbc\:mysql\://localhost\:3307/gestao_usuarios?useSSL\=false&serverTimezone\=UTC
+db.user=root
